ORM for canvas structure. Hated the template application so scrapped it and created a new one